[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://components/ui/debt_card_ui.gd" id="1"]

[node name="DebtCardUI" type="PanelContainer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Debt"

[node name="AmountLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "$0.00"

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="PaySlider" type="HSlider" parent="MarginContainer/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SliderLabel" type="Label" parent="MarginContainer/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "$0.00"

[node name="PayButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Pay"
